# todo-eda

./: .gitignore  README.md  pyproject.toml  wsgi.py
src/: setup.py
src/todo_eda/: bootstrap.py
src/todo_eda/adaptors/repository/: __init__.py
src/todo_eda/domain/: commands.py  events.py  model.py
src/todo_eda/entrypoints/: cli.py
src/todo_eda/entrypoints/flask_app/: __init__.py  config.py  messagebus.py  schema.py
src/todo_eda/entrypoints/flask_app/views/api/: __init__.py
src/todo_eda/response_objects/: __init__.py
src/todo_eda/service_layer/: handlers.py  messagebus.py  unit_of_work.py
src/todo_eda/views/: __init__.py  todos.py
