[tool.poetry]
name = "todo-eda"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.0.1"
marshmallow = "^3.13.0"
flask-marshmallow = "^0.14.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
